--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
   },
   "devDependencies": {
     "cssmin": "^0.4.3",
+    "grunt": "^1.0.2",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.0.0",
     "htmlmin": "^0.0.7",
+    "jit-grunt": "^0.10.0",
     "node-sass": "^7.0.1",
     "onchange": "^3.3.0",
     "parallelshell": "^3.0.2",
     "rimraf": "^2.6.2",
+    "time-grunt": "^1.4.0",
     "uglifyjs": "^2.4.11",
     "usemin-cli": "^0.5.1"
   }
